--- a/manual/ru/max/Animation-Constraints.html
+++ b/manual/ru/max/Animation-Constraints.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Animation Constraints - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Ограничения Анимации - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="This page contains the information about 3ds Max' animation constraints supported in Verge3D."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Animation Constraints / 3ds Max</h1>
+    <h1>Ограничения Анимации / 3ds Max</h1>
 
     <p>
-    This page contains the information about 3ds Max' <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-10AC3D82-523D-4670-8240-D6E3AC79F0BF-htm.html" target="_blank">animation constraints</a> which can be used with Verge3D.
+    Данная страница содержит информацию о <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-10AC3D82-523D-4670-8240-D6E3AC79F0BF-htm.html" target="_blank">animation constraints</a> программы 3ds Max, которые могут быть использованы в Verge3D.
     </p>
 
     [contents]
@@ -22,10 +22,11 @@
 
     [anchor:Constraints_and_Settings]
 
-    <h2>Constraints and Settings</h2>
+    <h2>Ограничения и Настройки</h2>
 
     <p>
-    Below are are listed 3ds Max' animation constraints that can be used with Verge3D. The parameters supported by Verge3D are overlaid with green color.
+    
+      Ниже перечислены ограничения анимации 3ds Max, которые можно использовать с Verge3D. Параметры, поддерживаемые Verge3D, выделены зеленым цветом.
     </p>
 
 
@@ -35,12 +36,12 @@
     <h3>Position</h3>
 
     <p>
-    This constraint forces the object to which it is applied to have the same location as its target.
+      Это ограничение заставляет объект, к которому оно применяется, иметь то же местоположение, что и его цель.
     </p>
 
     <img src="files/constraints-max/position.jpg" class="centered" style="max-width: 323px">
 
-    See more information on the *Position* constraint on Autodesk website: <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-01CBF3AF-6788-43CF-A4DC-3E458648EA52-htm.html" target="_blank">help page</a>.
+    Более подробную информацию об ограничении *Position* можно найти на <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-01CBF3AF-6788-43CF-A4DC-3E458648EA52-htm.html" target="_blank">сайте Autodesk</a>.
 
 
 
@@ -49,12 +50,12 @@
     <h3>Orientation</h3>
 
     <p>
-    This constraint forces the object to which it is applied to match the rotation of its target.
+      Это ограничение заставляет объект, к которому оно применяется, соответствовать вращению его цели.
     </p>
 
     <img src="files/constraints-max/orientation.jpg" class="centered" style="max-width: 323px">
 
-    See more information on the *Orientation* constraint on Autodesk website: <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-A39AD61C-D5B3-41BE-9F0C-ED554A5192D6-htm.html" target="_blank">help page</a>.
+    Более подробную информацию об ограничении *Orientation* можно найти на <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-A39AD61C-D5B3-41BE-9F0C-ED554A5192D6-htm.html" target="_blank">сайте Autodesk</a>.
 
 
 
@@ -63,32 +64,32 @@
     <h3>LookAt</h3>
 
     <p>
-    This constraint applies rotations to its owner, so that it always is looking towards its target. Thus you can implement billboarding with this constraint.
+      Это ограничение применяет вращение к своему владельцу, так что он всегда смотрит в сторону своей цели. Таким образом, с помощью этого ограничения можно реализовать "билбординг".
     </p>
 
     <img src="files/constraints-max/lookat.jpg" class="centered" style="max-width: 323px">
 
-    See more information on the *Orientation* constraint on Autodesk website: <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-74E8DBCD-060B-49CE-9DAA-701D513A8E1D-htm.html" target="_blank">help page</a>.
+    Более подробную информацию об ограничении *LookAt* можно найти на <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Animation/files/GUID-74E8DBCD-060B-49CE-9DAA-701D513A8E1D-htm.html" target="_blank">сайте Autodesk</a>.
 
 
 
     [anchor:Use_with_Puzzles]
 
-    <h2>Use with Puzzles</h2>
+    <h2>Использование с Пазлами</h2>
 
     <p>
-    All constraints, once assigned in 3ds Max and exported, can be removed, muted or ummuted with a <a href="manual/ru/puzzles/Animation.html#remove_mute_unmute_constraint">puzzle</a>. Unlike in 3ds Max, a removed/muted constraint does not reset the object - this puzzle just leaves the object with the same transform it had just before removing or muting.
+      Все ограничения, назначенные в 3ds Max и экспортированные, могут быть удалены и отключены с помощью <a href="manual/ru/puzzles/Animation.html#remove_mute_unmute_constraint">пазлов</a>. В отличие от 3ds Max, удаление/отключение ограничений не приводит к сбросу объекта - пазл просто оставляет объект с той же трансформацией, которая была у него непосредственно перед удалением или отключением. 
     </p>
 
     <p>
-    In addition, *Position* and *Orientation* constraints can be assigned at runtime with a <a href="manual/ru/puzzles/Animation.html#copy_transform">puzzle</a>.
+      Кроме того, ограничения *Position* и *Orientation* могут быть назначены на этапе выполнения с помощью <a href="manual/ru/puzzles/Animation.html#copy_transform">пазлов</a>.
     </p>
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
 
   </article></body>
