--- a/manual/ru/max/Camera.html
+++ b/manual/ru/max/Camera.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Working with Camera - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Работа с Камерой - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Find out how to create and control 3ds Max cameras to be used with Verge3D."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Working with Camera / 3ds Max</h1>
+    <h1>Работа с Камерой / 3ds Max</h1>
 
     <p>
-      This page contains the information on how to setup 3ds Max's cameras to be used with Verge3D.
+      На этой странице содержится информация о том, как настроить камеры 3ds Max для использования в Verge3D.
     </p>
 
     [contents]
@@ -21,10 +21,10 @@
 
     [anchor:setting_up_in_3ds_max]
 
-    <h2>Setting Up in 3ds Max</h2>
+    <h2>Настройка в 3ds Max</h2>
 
     <p>
-      Simply add one of the supported cameras to you scene:
+      Просто добавьте одну из поддерживаемых камер в сцену:
     </p>
 
     <ul>
@@ -36,54 +36,54 @@
 
     [anchor:camera_settings]
 
-    <h2>Camera Settings</h2>
+    <h2>Настройки Камеры</h2>
 
     <p>
-      Each camera in 3ds Max is assigned with the following Verge3D settings:
+      Каждой камере в 3ds Max назначаются следующие настройки Verge3D:
     </p>
 
     <img src="files/camera-max/camera-settings.jpg" alt="Camera settings in Verge3D for 3ds Max" class="centered" style="max-width: 329px">
 
-    <p>*Allow Panning* - allow camera panning.</p>
-    <p>*Rot. Speed* - camera rotation speed factor.</p>
-    <p>*Mov. Speed* - camera movevent speed factor.</p>
-    <p>*Disable Controls* - disable any controls. Specify if you're going to move your camera with animations, Puzzles or JavaScript.</p>
+    <p>*Allow Panning* - разрешить панорамирование камеры.</p>
+    <p>*Rot. Speed* - коэффициент скорости вращения камеры.</p>
+    <p>*Mov. Speed* - коэффициент скорости движения камеры.</p>
+    <p>*Disable Controls* - отключить любые элементы управления. Укажите, если вы будете перемещать камеру с помощью анимации, пазлов или JavaScript.</p>
 
 
     [anchor:orbit_settings]
 
-    <h3>Orbit Camera Settings</h3>
+    <h3>Настройки Камеры Orbit</h3>
 
-    <p>*Persp Min Dist* and *Persp Max Dist* - distance limits for perspective camera.</p>
-    <p>*Ortho Min Zoom* and *Ortho Max Zoom* - zoom limits for orthographic camera.</p>
-    <p>*Min Vertical Angle* and *Max Vertical Angle* - vertical (up-down) angle limits.</p>
-    <p>*Min Horizon Angle* and *Max Horizon Angle* - horizontal (left-right) angle limits.</p>
+    <p>*Persp Min Dist* и *Persp Max Dist* - пределы расстояния для перспективной камеры.</p>
+    <p>*Ortho Min Zoom* и *Ortho Max Zoom* - пределы масштабирования для ортографической камеры.</p>
+    <p>*Min Vertical Angle* и *Max Vertical Angle* - пределы вертикального угла (верх-низ).</p>
+    <p>*Min Horizon Angle* и *Max Horizon Angle* - пределы горизонтального угла (лево-право).</p>
 
     [anchor:firstperson_settings]
 
-    <h3>First-Person Camera Settings</h3>
+    <h3>Настройки Камеры First-Person</h3>
 
-    <p>*Enabled* - enable first-person camera.</p>
+    <p>*Enabled* - Включить камеру first-person.</p>
 
-    <p>*Collision Material* - collision material which will be used for the camera.</p>
+    <p>*Collision Material* - материал столкновения, который будет использоваться для камеры.</p>
 
-    <p>*Gaze Level* - first-person camera "gaze" (or "head"/"eyes") level.</p>
+    <p>*Gaze Level* - "взгляд" камеры от первого лица (на уровне глаз).</p>
 
-    <p>*Story Height* - story height.</p>
+    <p>*Story Height* - высота этажа.</p>
 
 
 
     [anchor:camera_control_with_puzzles]
 
-    <h2>Camera Control with Puzzles</h2>
+    <h2>Управление Камерой с Помощью Пазлов</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Camera.html">camera puzzles</a> to control your camera in real time.
+      Вы можете использовать <a href="manual/ru/puzzles/Camera.html">camera puzzles</a> чтобы управлять вашей камерой в реальном времени.
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
