--- a/manual/ru/max/GLTF-Materials.html
+++ b/manual/ru/max/GLTF-Materials.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: glTF Materials (glTF 2.0-compliant PBR) - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: glTF Материалы (PBR совместимый с glTF 2.0) - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="How to setup glTF-compliant PBR materials in 3ds Max to be used with Verge3D."/>
     <base href="../../../" />
@@ -10,56 +10,56 @@
   </head>
   <body><article>
 
-    <h1>glTF Materials (glTF 2.0-compliant PBR) / 3ds Max</h1>
+    <h1>glTF Материалы (PBR совместимый с glTF 2.0) / 3ds Max</h1>
 
     <p>
-    If your content needs to be compatible with glTF 2.0 standard <a href="manual/ru/introduction/FAQ.html#gltf_materials">for some reason</a>, you can use physical materials for this purpose as described below.
+    Если вам <a href="manual/ru/introduction/FAQ.html#gltf_materials">по какой-то причине</a> требуется, чтобы материал был совместим с форматом glTF 2.0, вы можете использовать простые настройки на основе шейдерной ноды *Principled BSDF*.
     </p>
 
     <img src="files/physical-material/phmat_00.png">
 
-    <h2>Contents</h2>
+    <h2>Содержание</h2>
 
     [contents]
 
 
     [anchor:setting_up]
 
-    <h2>Setting Up</h2>
+    <h2>Настройки</h2>
 
     <p>
-    Add a <b>Physical Material</b> shader node as follows: go to <b>Materials/Map Browser</b> and choose <b>Physical Material</b> from the <b>General</b> material list.
+    Добавьте шейдерную ноду <b>Physical Material</b> следующим образом: перейдите в раздел <b>Materials/Map Browser</b> и выберите <b>Physical Material</b> из списка материалов <b>General</b>.
     </p>
 
     <img src="files/physical-material/phmat_02.png">
 
     <p>
-    Then you can connect texture nodes to the <b>Physical Material</b> as described below.  Note that all textures are optional and any of them can be safely omitted.
+    Затем вы можете подключить к <b>Physical Material</b> текстурную ноду, как показано ниже. Обратите внимание, что все текстуры являются необязательными, и любую из них можно смело опустить. 
     </p>
 
     <img src="files/physical-material/phmat_01.png">
 
     <ul>
       <li>
-      Connect an <b>Ambient Occlusion</b> texture to the <b>Base Weight Map</b> input. For better consistency between the 3ds Max viewport and Verge3D you can also connect the <b>Ambient Occlusion</b> texture to the <b>Refl Color Map</b> input, but it's not necessary.
+        Подключите текстуру <b>Ambient Occlusion</b> ко входу <b>Base Weight Map</b>. Для лучшей согласованности между вьюпортом 3ds Max и Verge3D текстуру <b>Ambient Occlusion</b> можно также подключить ко входу <b>Refl Color Map</b>, но это не обязательно.
       </li>
       <li>
-      Connect a <b>Base Color</b> texture to the <b>Base Color Map</b> input.
+      Подлючите текстуру <b>Base Color</b> ко входу <b>Base Color Map</b>.
       </li>
       <li>
-      Connect a <b>Roughness</b> texture to the <b>Roughness Map</b> input.
+      Подлючите текстуру <b>Roughness</b> ко входу <b>Roughness Map</b>.
       </li>
       <li>
-      Connect a <b>Metallic</b> texture to the <b>Metalness Map</b> input.
+      Подлючите текстуру <b>Metallic</b> ко входу <b>Metalness Map</b>.
       </li>
       <li>
-      Connect a <b>Normal</b> texture to a <b>Normal Map</b> node and then connect it to the <b>Bump Map</b> input of the <b>Physical Material</b>. You should also set the <b>Bump Map Amount</b> value in the <b>Special Map</b> panel of the <b>Physical Material</b> to 1.0.
+      Подлючите текстуру <b>Normal</b> к ноде <b>Normal Map</b>, а затем к ноде <b>Physical Material</b> ко входу <b>Bump Map</b>. После чего, вам следует установить значение <b>Bump Map Amount</b> в панели <b>Special Map</b> настроек <b>Physical Material</b> равным 1.0.
       </li>
       <li>
-      Connect an <b>Emission</b> texture to the <b>Emission Color Map</b>. You should also set the emission factor to 1.0 in the <b>Basic Parameters</b> panel of the <b>Physical Material</b> preferences.
+      Подключите текстуру <b>Emission</b> ко входу <b>Emission Color Map</b>. После чего, вам следует установить значение emission равным 1.0 в панели <b>Basic Parameters</b> настроек <b>Physical Material</b>.
       </li>
       <li>
-      The <b>Transparency</b> map will be taken from Alpha Channel of the <b>Base Color</b> texture.
+      Карта <b>Transparency</b> будет взята из Альфа-канала текстуры <b>Base Color</b>.
       </li>
     </ul>
 
@@ -68,16 +68,16 @@
 
     [anchor:color_space]
 
-    <h2>Color Space and Gamma Correction</h2>
+    <h2>Коррекция Цветового Пространства и Гаммы</h2>
 
     <p>
-    For correct rendering, the color space should be taken into account for images. All images, except the <b>Base Color</b> and <b>Emission</b> textures, must be presented in the linear color space. To do this, select <b>Override Gamma</b> with the 1.0 value in the <b>Gamma Preferences</b> when you open an image in the <b>Open Image</b> dialog box (as can be seen below).
+      Для правильной визуализации необходимо учитывать цветовое пространство для изображений. Все изображения, кроме текстур <b>Base Color</b> и <b>Emission</b>, должны быть представлены в линейном цветовом пространстве. Для этого выберите <b>Override Gamma</b> со значением 1.0 в <b>Gamma Preferences</b>, затем откройте изображение в диалоговом окне <b>Open Image</b> (как показано ниже).
     </p>
 
     <img src="files/physical-material/phmat_04.png">
 
     <p>
-    On the contrary, the <b>Base Color</b> and <b>Emission</b> textures must be opened in sRGB color space (with Gamma 2.2). To make it happen, just leave <b>Automatic</b> in the gamma preferences of the <b>Open Image</b> dialog box.
+    Текстуры <b>Base Color</b> и <b>Emission</b> должны быть открыты в цветовом пространстве sRGB color space (с Gamma 2.2). Для этого оставьте значение <b>Automatic</b> в настройках gamma preferences диалогового окна <b>Open Image</b>.
     </p>
 
     <img src="files/physical-material/phmat_05.png">
@@ -85,16 +85,16 @@
 
     [anchor:transparency_texture]
 
-    <h2>Transparency Texture</h2>
+    <h2>Текстура Прозрачности</h2>
 
     <p>
-    The engine will use the <b>Alpha</b> channel from the <b>Base Color</b> texture as a transparency map automatically, if it is present. To make the transparency visible in the 3ds Max viewport, connect the <b>Alpha</b> channel of the <b>Base Color</b> texture to the <b>Transparency Color Map</b> input.
+    Движок будет автоматическии использовать <b>Alpha</b> канал (если он есть) из текстуры <b>Base Color</b> в качестве карты прозрачности. Чтобы сделать прозрачность видимой во вьюпорте 3ds Max, подключите <b>Alpha</b> канал текстуры <b>Base Color</b> ко входу <b>Transparency Color Map</b>.
     </p>
 
     <img src="files/physical-material/phmat_06.png">
 
     <p>
-    Also in the <b>Preferences</b> of the texture, in the <b>Bitmap Parameters</b> panel you should set <b>Mono Chanel Output</b> to <b>Alpha</b> and <b>RGB Channel Output</b> to <b>Alpha as Gray</b>.
+    Также в <b>Preferences</b> текстуры, в панели <b>Bitmap Parameters</b> следует установить <b>Mono Chanel Output</b> в <b>Alpha</b> и <b>RGB Channel Output</b> в <b>Alpha as Gray</b>.
     </p>
 
     <img src="files/physical-material/phmat_07.png">
@@ -102,36 +102,36 @@
 
     [anchor:exporting_substance]
 
-    <h2>Exporting Textures from Substance Painter</h2>
+    <h2>Экспорт Текстур из Substance Painter</h2>
 
-    <p>The models and the baked normal and occlusion maps (if any) can be loaded in Substance Painter via OBJ format.</p>
+    <p>Модели, вместе с запечёнными картами нормалей и окклюзии (если они есть), могут быть открыты в Substance Painter через формат OBJ.</p>
 
     <img src="files/physical-material/substance_screenshot.jpg" class="centered" style="max-width: 819px;">
 
-    <p>Overall 3 maps are produced in this software in the end: base color/transparency, occlusion/roughness/metallic and normal.</p>
+    <p>На выходе в этой программе создаются три карты: base color/transparency, occlusion/roughness/metallic и normal.</p>
 
     <img src="files/physical-material/pbr_texture_set_preview.jpg" class="centered" style="max-width: 819px;">
 
     <p>
-      To facilitate exporting textures from Substance Painter and to ensure maximum capabilities within the Verge3D engine we recommend using <a href="files/physical-material/Verge3D_for_3ds_Max.spexp" target="_blank">Verge3D export preset</a>. Place this preset file to the *export-presets* folder usually located in the <strong>My Documents\Allegorithmic\Substance Painter\shelf\</strong> directory (create it if does not exist).
+      Для упрощения экспорта текстур из Substance Painter и достижения максимального потенциала при использовании движка Verge3D, мы рекомендуем использовать <a href="files/physical-material/Verge3D_for_3ds_Max.spexp" target="_blank">Verge3D export preset</a>. Поместите этот файл с пресетом в папку *export-presets*, которую можно найти, используя следующий путь <strong>My Documents\Allegorithmic\Substance Painter\shelf\</strong> (если папки нет, создайте её самостоятельно).
     </p>
 
     <img src="files/physical-material/phmat_09.png">
 
-    <p>When exporting textures from Substance Painter, choose *Verge3d for 3ds Max* in the export dialog window so that all generated textures are compatible with the glTF 2.0 standard Verge3D is based on.</p>
+    <p>При экспорте текстур из Substance Painter, в диалоговом окне эксопрта выберете *Verge3d for Blender*, чтобы он сгенерировал текстуры совместимые с форматом glTF 2.0 standard, на котором основан Verge3D.</p>
 
 
     [anchor:export_to_gltf_in_runtime]
 
-    <h2>Export to glTF in Runtime</h2>
+    <h2>Экспортируйте в glTF во время запуска</h2>
 
-    <p>With *export to gltf* puzzle you can export your models or the entire scene in realtime. Then you can download the exported model or upload to the server for permanent storage. See more in the puzzle's <a href="manual/ru/puzzles/Scenes.html#export_to_gltf">reference</a>.</p>
+    <p>С пазлом *export to gltf* вы можете экспортировать свои модели или целую сцену в реальном времени. Затем вы можете скачать экспортированную модель или загрузить на сервер для постоянного хранения. Ознакомьтесь с данным пазлом подробнее по <a href="manual/ru/puzzles/Scenes.html#export_to_gltf">ссылке</a>.</p>
 
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
